--- a/src/styles.css
+++ b/src/styles.css
@@ -118,7 +118,7 @@ a , a:hover, a:visited, a:link, a:active{
 	height: 20px;
 }
 .gr-empty{
-	background-image:url(img/gr-Empty.png);
+	background-image:url(img/gr-empty.png);
 }
 .gr-mine1{
 	background-image:url(img/gr-1mine.png);
